--- a/sab-info-services.properties
+++ b/sab-info-services.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql:// 192.168.174.1:3306/sabwiki_development
-spring.datasource.username=root
-spring.datasource.password=admin1
+spring.datasource.url=jdbc:mysql://192.168.1.4:3306/sabwiki_development
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
