--- a/sab-info-services.properties
+++ b/sab-info-services.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.1.4:3306/sabwiki_development
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://192.168.92.139:3306/sabwiki_development
+spring.datasource.username=kk
+spring.datasource.password=password
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
