--- a/sab-info-services.properties
+++ b/sab-info-services.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.92.139:3306/sabwiki_development
-spring.datasource.username=kk
+spring.datasource.username=sunil
 spring.datasource.password=password
 
 spring.jpa.show-sql=true
