--- a/sab-plm-service.properties
+++ b/sab-plm-service.properties
@@ -14,10 +14,10 @@ spring.servlet.multipart.max-request-size=10MB
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #---------------------------------------------------------------------------------------------
-spring.datasource.url=jdbc:mysql://192.168.43.138:3306/dev-plm
+spring.datasource.url=jdbc:mysql://localhost:3306/dev-plm
 #--------------------------------------------------------------------------------------------
 spring.datasource.username=dev
-spring.datasource.password=dev
+spring.datasource.password=dev@123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 database.monodburl="mongodb://dev:dev@192.168.92.137:27017/test"
